page how-to-buy: - сделает правки первых двух блоков - добавит драфт блока parcel

--- a/src/pages/how-to-buy.html
+++ b/src/pages/how-to-buy.html
@@ -18,7 +18,7 @@
 
 </style> -->
 
-<main>
+<main class="main main__how-to-buy">
   <section class="how-to-buy section section--pb-m">
     <div class="section-xxl">
       <div class="how-to-buy__wrapper">
@@ -27,14 +27,16 @@
             <li class="breadcrumbs__item"><a href="#">Главная</a></li>
             <li class="breadcrumbs__item breadcrumbs__item--active">Как покупать в США</li>
           </ul>
-          <h1 class="how-to-buy__heading heading-primary">Как покупать в&nbsp;США?</h1>
-          <p class="how-to-buy__desc">
-            Магазины США часто не&nbsp;доставляют товары в&nbsp;Россию, но это не проблема.
-            Мы&nbsp;поможем покупать по лучшим ценам и&nbsp;экономить на доставке.
-            Наш новый современный склад в&nbsp;Делавере подойдет для&nbsp;покупок
-            в&nbsp;магазинах Америки. Мы получим ваши посылки и отправим их
-            к&nbsp;вам домой. Быстро и дёшево.
-          </p>
+          <div class="how-to-buy__text-wrapper">
+            <h1 class="how-to-buy__heading heading-primary">Как покупать в&nbsp;США?</h1>
+            <p class="how-to-buy__desc">
+              Магазины США часто не&nbsp;доставляют товары в&nbsp;Россию, но это не проблема.
+              Мы&nbsp;поможем покупать по лучшим ценам и&nbsp;экономить на доставке.
+              Наш новый современный склад в&nbsp;Делавере подойдет для&nbsp;покупок
+              в&nbsp;магазинах Америки. Мы получим ваши посылки и отправим их
+              к&nbsp;вам домой. Быстро и дёшево.
+            </p>
+          </div>
         </div>
       </div>
     </div>
@@ -94,6 +96,59 @@
         </div>
       </div>
     </div>
+  </section>
+  <section class="section parcel">
+    <div class="parcel__wrapper">
+      <div class="container">
+        <ul class="parcel__list">
+          <li class="parcel__item row justify-content-start">
+            <div class="parcel__item-number col-lg-1">01.</div>
+            <div class="parcel__item-text-wrapper col-lg-8">
+              <p class="parcel__item-title">
+                <span class="blue">Регистрируете посылку</span> как только магазин выдал вам трекинг номер (номер
+                отслеживания)
+              </p>
+              <p class="parcel__item-desc">
+                Как только магазин прислал вам трекинг номер – внесите посылку
+                в&nbsp;личный кабинет, заполняете декларацию и адрес доставки (пункт выдачи или постамат)
+                на&nbsp;сайте Простобокс и вам будет доступна самая выгодная цена
+                на&nbsp;доставку.
+              </p>
+              <p class="parcel__item-desc">
+                На этом этапе вы можете положить
+                в вашу посылку сладости, напитки или заказать дополнительную упаковку. Но будьте внимательны, конфеты и
+                напитки пропорционально увеличивают вес вашей посылки. Коме того, можно сразу пополнить счет на
+                примерную
+                сумму доставки и средства
+                за&nbsp;доставку спишутся автоматически после прихода посылки на склад.
+              </p>
+            </div>
+          </li>
+          <li class="parcel__item row justify-content-start">
+            <div class="parcel__item-number col-lg-1">02.</div>
+            <div class="parcel__item-text-wrapper col-lg-8">
+              <p class="parcel__item-title">
+                Посылка прилетает на склад
+              </p>
+              <p class="parcel__item-desc">
+                Вам осталось оплатить доставку, если вы не сделали этого заранее. После оплаты посылка улетит ближайшим
+                рейсом к вам домой.
+              </p>
+            </div>
+          </li>
+          <li class="parcel__item row justify-content-start">
+            <div class="parcel__item-number col-lg-1">03.</div>
+            <div class="parcel__item-text-wrapper col-lg-8">
+              <p class="parcel__item-title">
+                <span class="blue">Получаете посылку</span> через 5-10 дней после отправки из США
+              </p>
+              <a class="button parcel__button-wrapper" href="">Получить адрес в США</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+
   </section>
 
 </main>
