--- a/src/pages/how-to-buy.html
+++ b/src/pages/how-to-buy.html
@@ -85,7 +85,7 @@
         </div>
       </div>
       <div class="row justify-content-end">
-        <div class="col-lg-6 how-details__block-container">
+        <div class="col-lg-6 how-details__block-container how-details__block-container--shipment">
           <div class="how-details__wrapper how-details__wrapper--shipment">
             <p class="how-details__brief">Хотите получить самую <span class="blue">выгодную цену</span> на доставку?</p>
           </div>
