how-to-buy: - WIP линии в section - WIP последний section get-address

--- a/src/pages/how-to-buy.html
+++ b/src/pages/how-to-buy.html
@@ -64,7 +64,7 @@
       </div>
       <div class="row justify-content-start how-details__block-wrapper how-details__block-wrapper--us-prices">
         <div class="col-lg-6 how-details__block-container">
-          <div class="how-details__wrapper">
+          <div class="how-details__wrapper how-details__wrapper--us-prices">
             <div class="how-details__container how-details__container--us-prices">
               <p class="how-details__brief">
                 <span class="blue">Покупаете</span> в&nbsp;Американском магазине
@@ -77,10 +77,8 @@
               </p>
             </div>
           </div>
-          <div class="how-details__container">
-            <div class="how-details__button-wrapper">
-              <a class="button button--medium" href="#">Что можно покупать?</a>
-            </div>
+          <div class="how-details__button-wrapper how-details__button-wrapper--us-prices">
+            <a class="button button--medium" href="#">Что можно покупать?</a>
           </div>
         </div>
       </div>
@@ -149,6 +147,22 @@
       </div>
     </div>
 
+  </section>
+  <section class="section get-address">
+    <div class="container">
+      <div class="get-address__wrapper row justify-content-end">
+        <div class="get-address__block-wrapper col-lg-6">
+        <div class="get-address__text-wrapper">
+          <p class="get-address__heading heading-secondary">
+            Получите <span class="blue">бесплатный адрес</span> для покупок в США
+          </p>
+        </div>
+        <div class="get-address__button-wrapper">
+          <a class="button button--medium button--medium-2" href="#">Зарегистрироватьcя</a>
+        </div>
+      </div>
+      </div>
+    </div>
   </section>
 
 </main>
