Исправляет фоны и отступы

--- a/src/pages/how-to-buy.html
+++ b/src/pages/how-to-buy.html
@@ -5,21 +5,21 @@
 
 {% block main %}
 
-<!-- <style>
-  html {
-    background-image: url("img/how-to-s.png");
+<style>
+  /* html {
+    background-image: url("img/how-to-buy-desktop.png");
     background-position: center top 0;
     background-repeat: no-repeat;
   }
 
   body {
     opacity: 0.5;
-  }
+  } */
 
-</style> -->
+</style>
 
 <main class="main main__how-to-buy">
-  <section class="how-to-buy section section--pb-m">
+  <section class="how-to-buy section section--pb-m mb-lg-6">
     <div class="section-xxl">
       <div class="how-to-buy__wrapper">
         <div class=" container">
@@ -42,12 +42,12 @@
     </div>
   </section>
   <section class="section how-details">
-    <div class="container">
+    <div class="container how-details__lines">
       <div class="row justify-content-end how-details__block-wrapper how-details__block-wrapper--free-address">
         <div class="col-lg-6 how-details__block-container">
           <div class="how-details__wrapper">
             <p class="how-details__brief">
-              Получаете <span class="blue">бесплатный адрес</span> в Америке, чтобы магазины приняли вас
+              Получаете <span class="blue">бесплатный адрес</span> в&nbsp;Америке, чтобы магазины приняли вас
               за Американца.
             </p>
             <p class="how-details__desc">
