--- a/src/pages/how-to-buy.html
+++ b/src/pages/how-to-buy.html
@@ -95,57 +95,57 @@
       </div>
     </div>
   </section>
-  <section class="section parcel">
-    <div class="parcel__wrapper">
-      <div class="container">
-        <ul class="parcel__list">
-          <li class="parcel__item row justify-content-start">
-            <div class="parcel__item-number col-lg-1">01.</div>
-            <div class="parcel__item-text-wrapper col-lg-8">
-              <p class="parcel__item-title">
-                <span class="blue">Регистрируете посылку</span> как только магазин выдал вам трекинг номер (номер
-                отслеживания)
-              </p>
-              <p class="parcel__item-desc">
-                Как только магазин прислал вам трекинг номер – внесите посылку
-                в&nbsp;личный кабинет, заполняете декларацию и адрес доставки (пункт выдачи или постамат)
-                на&nbsp;сайте Простобокс и вам будет доступна самая выгодная цена
-                на&nbsp;доставку.
-              </p>
-              <p class="parcel__item-desc">
-                На этом этапе вы можете положить
-                в вашу посылку сладости, напитки или заказать дополнительную упаковку. Но будьте внимательны, конфеты и
-                напитки пропорционально увеличивают вес вашей посылки. Коме того, можно сразу пополнить счет на
-                примерную
-                сумму доставки и средства
-                за&nbsp;доставку спишутся автоматически после прихода посылки на склад.
-              </p>
-            </div>
-          </li>
-          <li class="parcel__item row justify-content-start">
-            <div class="parcel__item-number col-lg-1">02.</div>
-            <div class="parcel__item-text-wrapper col-lg-8">
-              <p class="parcel__item-title">
-                Посылка прилетает на склад
-              </p>
-              <p class="parcel__item-desc">
-                Вам осталось оплатить доставку, если вы не сделали этого заранее. После оплаты посылка улетит ближайшим
-                рейсом к вам домой.
-              </p>
-            </div>
-          </li>
-          <li class="parcel__item row justify-content-start">
-            <div class="parcel__item-number col-lg-1">03.</div>
-            <div class="parcel__item-text-wrapper col-lg-8">
-              <p class="parcel__item-title">
-                <span class="blue">Получаете посылку</span> через 5-10 дней после отправки из США
-              </p>
-              <a class="button parcel__button-wrapper" href="">Получить адрес в США</a>
-            </div>
-          </li>
-        </ul>
+  <section class="section delivery-options">
+    <div class="section-xxl">
+      <div class="delivery-options__wrapper">
+        <div class="container">
+          <ul class="delivery-options__list">
+            <li class="delivery-options__item">
+              <div class="delivery-options__item-text-wrapper">
+                <p class="delivery-options__item-title">
+                  <span class="blue">Регистрируете посылку</span> как только магазин выдал вам трекинг номер (номер
+                  отслеживания)
+                </p>
+                <p class="delivery-options__item-desc">
+                  Как только магазин прислал вам трекинг номер – внесите посылку
+                  в&nbsp;личный кабинет, заполняете декларацию и адрес доставки (пункт выдачи или постамат)
+                  на&nbsp;сайте Простобокс и вам будет доступна самая выгодная цена
+                  на&nbsp;доставку.
+                </p>
+                <p class="delivery-options__item-desc">
+                  На этом этапе вы можете положить
+                  в вашу посылку сладости, напитки или заказать дополнительную упаковку. Но будьте внимательны, конфеты и
+                  напитки пропорционально увеличивают вес вашей посылки. Коме того, можно сразу пополнить счет на
+                  примерную
+                  сумму доставки и средства
+                  за&nbsp;доставку спишутся автоматически после прихода посылки на склад.
+                </p>
+              </div>
+            </li>
+            <li class="delivery-options__item">
+              <div class="delivery-options__item-text-wrapper">
+                <p class="delivery-options__item-title">
+                  Посылка прилетает на склад
+                </p>
+                <p class="delivery-options__item-desc">
+                  Вам осталось оплатить доставку, если вы не сделали этого заранее. После оплаты посылка улетит ближайшим
+                  рейсом к вам домой.
+                </p>
+              </div>
+            </li>
+            <li class="delivery-options__item row">
+              <div class="delivery-options__item-text-wrapper">
+                <p class="delivery-options__item-title">
+                  <span class="blue">Получаете посылку</span> через 5-10 дней после отправки из США
+                </p>
+                <a class="button delivery-options__button-wrapper" href="">Получить адрес в США</a>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
+
 
   </section>
   <section class="section option-no">
