--- a/src/pages/how-to-buy.html
+++ b/src/pages/how-to-buy.html
@@ -133,7 +133,7 @@
                 </p>
               </div>
             </li>
-            <li class="delivery-options__item row">
+            <li class="delivery-options__item">
               <div class="delivery-options__item-text-wrapper">
                 <p class="delivery-options__item-title">
                   <span class="blue">Получаете посылку</span> через 5-10 дней после отправки из США
@@ -148,7 +148,78 @@
 
 
   </section>
-  <section class="section option-no">
+  <section class="section delivery-options delivery-options--black">
+    <div class="section-xxl">
+      <div class="delivery-options__wrapper">
+        <div class="container">
+          <ul class="delivery-options__list">
+            <li class="delivery-options__item">
+              <div class="delivery-options__item-text-wrapper">
+                <p class="delivery-options__item-title">
+                  Следите, когда посылка придет на склад
+                </p>
+                <p class="delivery-options__item-desc">
+                  Обязательно внесите трекер, который вам пришлёт интернет-магазин в «Ожидаемые посылки» в личном кабинете на нашем сайте. Когда посылка окажется на складе она автоматически попадет к вам в аккаунт.
+                </p>
+              </div>
+            </li>
+            <li class="delivery-options__item">
+              <div class="delivery-options__item-text-wrapper">
+                <p class="delivery-options__item-title">
+                  Выбираете способ доставки
+                </p>
+                <p class="delivery-options__item-desc">
+                  Сейчас мы предлагаем несколько способов доставки. Если вам нужна быстрая курьерская доставка – придется заполнить подробную декларацию, паспортные данные и ИНН получателя.
+                </p>
+                <p class="delivery-options__item-desc">
+                  Если вы не хотите заморачиваться с декларацией и вам не важны сроки – воспользуйтесь нашей доставкой через Почту России.
+                </p>
+                <a class="button" href="">Быстрая доставка</a>
+                <a class="button" href="">Простая декларация</a>
+              </div>
+            </li>
+            <li class="delivery-options__item">
+              <div class="delivery-options__item-text-wrapper">
+                <p class="delivery-options__item-title">
+                  Оформляете доставку
+                </p>
+                <p class="delivery-options__item-desc">
+                  Итак, посылка на складе. Теперь вам надо немного постараться. Заполняете декларацию на каждый товар в посылке. Вносите все необходимые данные получателя, паспортные данные, ИНН и выбираете удобный пункт самовывоза или постамат.
+                </p>
+                <p class="delivery-options__item-desc">
+                  На этом этапе вы можете положить в вашу посылку сладости, напитки или заказать дополнительную упаковку. Но будьте внимательны, конфеты и напитки пропорционально увеличивают вес вашей посылки. Можно сразу пополнить счет на примерную сумму доставки и средства за доставку спишутся автоматически после взвешивания.
+                </p>
+              </div>
+            </li>
+            <li class="delivery-options__item">
+              <div class="delivery-options__item-text-wrapper">
+                <p class="delivery-options__item-title">
+                  Оплачиваете доставку и посылка улетает к вам
+                </p>
+                <p class="delivery-options__item-desc">
+                  После того как мы примем и взвесим вашу посылку, вам останется пополнить баланс и оплатить доставку, если вы не сделали этого заранее. После оплаты посылка улетит ближайшим рейсом к вам домой.
+                </p>
+              </div>
+            </li>
+            <li class="delivery-options__item">
+              <div class="delivery-options__item-text-wrapper">
+                <p class="delivery-options__item-title">
+                  Step-last
+                </p>
+                <p class="delivery-options__item-desc">
+                  Получаете посылку через 7-15 дней после отправки из США.
+                </p>
+                <a class="button delivery-options__button-wrapper" href="">Получить адрес в США</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+
+  </section>
+  <!-- <section class="section option-no">
     <div class="container">
       <div class="option-no__wrapper row justify-content-start">
         <div class="option-no__blocks-wrapper col-lg-9">
@@ -221,7 +292,7 @@
       </div>
     </div>
 
-  </section>
+  </section> -->
   <section class="section section--pb get-address">
     <div class="container">
       <div class="get-address__container">
