Исправляет нижний баннер

--- a/src/pages/how-to-buy.html
+++ b/src/pages/how-to-buy.html
@@ -7,7 +7,7 @@
 
 <style>
   /* html {
-    background-image: url("img/how-to-buy-desktop.png");
+    background-image: url("img/how-to-s-mobile.png");
     background-position: center top 0;
     background-repeat: no-repeat;
   }
@@ -52,7 +52,7 @@
             </p>
             <p class="how-details__desc">
               После регистрации на нашем сайте у вас будет виртуальный адрес в США,
-              который вы сможете указывать при оформлении заказов
+              который вы сможете&nbsp;указывать при оформлении заказов
               в&nbsp;Американских интернет&#8209;магазинах.
             </p>
 
@@ -219,97 +219,17 @@
 
 
   </section>
-  <!-- <section class="section option-no">
+  <section class="section section-banner section-banner--get-address">
     <div class="container">
-      <div class="option-no__wrapper row justify-content-start">
-        <div class="option-no__blocks-wrapper col-lg-9">
-          <ul class="option-no__list">
-            <li class="option-no__item">
-              <p class="option-no__item-title">
-                Следите, когда посылка придет на склад
-              </p>
-              <p class="option-no__item-desc">
-                Обязательно внесите трекер, который вам пришлёт интернет-магазин в «Ожидаемые посылки» в личном кабинете
-                на нашем сайте. Когда посылка окажется на складе она автоматически попадет к вам
-                в аккаунт.
-              </p>
-            </li>
-            <li class="option-no__item">
-              <p class="option-no__item-title">
-                Выбираете способ доставки
-              </p>
-              <p class="option-no__item-desc">
-                Сейчас мы предлагаем несколько способов доставки. Если вам нужна быстрая курьерская доставка – придется
-                заполнить подробную декларацию, паспортные данные и ИНН получателя.
-              </p>
-              <div class="option-no__buttons-wrapper">
-                <a class="button" href="#">Быстрая доставка</a>
-                <a class="button" href="#">Простая декларация</a>
-              </div>
-            </li>
-            <li class="option-no__item">
-              <p class="option-no__item-title">
-                Оформляете доставку
-              </p>
-              <p class="option-no__item-desc option-no__item-desc--fast-shipment">
-                Итак, посылка на складе. Теперь вам надо немного постараться. Заполняете декларацию на каждый товар в
-                посылке. Вносите все необходимые данные получателя, паспортные данные, ИНН
-                и выбираете удобный пункт самовывоза или постамат.
-              </p>
-              <p class="option-no__item-desc option-no__item-desc--declaration">
-                Итак, посылка на складе. Теперь вам надо немного постараться. Заполняете простую декларацию. Вносите все
-                необходимые данные получателя. Посылка придет в ваше почтовое отделение.
-              </p>
-              <p class="option-no__item-desc">
-                На этом этапе вы можете положить в вашу посылку сладости, напитки или заказать дополнительную упаковку.
-                Но будьте внимательны, конфеты
-                и напитки пропорционально увеличивают вес вашей посылки. Можно сразу пополнить счет
-                на примерную сумму доставки
-                и средства за доставку спишутся автоматически после взвешивания.
-              </p>
-            </li>
-            <li>
-              <p class="option-no__item-title">
-                Оплачиваете доставку и посылка улетает к вам
-              </p>
-              <p class="option-no__item-desc">
-                После того как мы примем и взвесим вашу посылку, вам останется пополнить баланс и оплатить доставку,
-                если вы не сделали этого заранее. После оплаты посылка улетит ближайшим рейсом к вам домой.
-              </p>
-            </li>
-            <li>
-              <p class="option-no__item-title">
-                Step-last
-              </p>
-              <p class="option-no__item-desc">
-                Получаете посылку через 7-15 дней после отправки из США.
-              </p>
-              <a class="button" href="#">Получить адрес в США</a>
-            </li>
-          </ul>
-
-        </div>
-      </div>
-    </div>
-
-  </section> -->
-  <section class="section section--pb get-address">
-    <div class="container">
-      <div class="get-address__container">
-        <div class="get-address__container2">
-          <div class="get-address__wrapper row justify-content-end">
-            <!-- <div class="get-address__container "> -->
-            <div class="get-address__block-wrapper col-lg-6">
-              <div class="get-address__text-wrapper">
-                <p class="get-address__heading heading-secondary">
-                  Получите <span class="blue">бесплатный адрес</span> для покупок в США
-                </p>
-              </div>
-              <div class="get-address__button-wrapper">
-                <a class="button button--medium button--medium-2" href="#">Зарегистрироватьcя</a>
-              </div>
-            </div>
-            <!-- </div> -->
+      <div class="section-banner__wrapper">
+        <div class="section-banner__block-wrapper">
+          <div class="section-banner__text-wrapper">
+            <p class="section-banner__heading heading-secondary">
+              Получите <span class="blue">бесплатный адрес</span> для покупок в&nbsp;США
+            </p>
+          </div>
+          <div class="section-banner__button-wrapper">
+            <a class="button button--medium button--medium-2" href="#">Зарегистрироватьcя</a>
           </div>
         </div>
       </div>
