--- a/src/pages/notification.html
+++ b/src/pages/notification.html
@@ -148,16 +148,16 @@
       <div class="place-parcel">
         <h3 class="place-parcel__heading">Оформить посылку заранее</h3>
         <p class="place-parcel__text">чтобы отправить посылку со склада без задержек и ещё больше сэкономить</p>
-        <form class="place-parcel__form" method="get" action="#">
+        <form class="place-parcel__form" method="POST" action="#">
           <input class="place-parcel__input" type="text" placeholder="Введите номер трекинга">
-          <button class="button place-parcel__btn">Оформить</button>
+          <button class="button place-parcel__btn" type="submit">Оформить</button>
         </form>
       </div>
     </div>
 
     <div class="current-sales">
       <h3 class="current-sales__heading">B&H Photo Video</h3>
-      <p class="current-sales__text">Большая распродажа гаджетов: до - <span>$500 на Apple, Samsung</span>, камеры <span>Nikon</span> и <span>Canon, One Plus</span></p>
+      <p class="current-sales__text">Большая распродажа гаджетов :до - <span>$500 на Apple, Samsung</span>, камеры <span>Nikon</span> и <span>Canon, One Plus</span></p>
       <a class="current-sales__link" href="#">Перейти в магазин</a>
     </div>
   </main>
