--- a/src/pages/orders_create.html
+++ b/src/pages/orders_create.html
@@ -5,9 +5,14 @@
 {% block main %}
 
   <main>
-    <div class="orders-wrapper">
-
+    <div class="container">
+      <div class="orders-wrapper">
+        <div class="my-order">
+          test
+        </div>
+      </div>
     </div>
+
 
   </main>
 {% endblock %}
