my-order draft2

--- a/src/pages/orders_create.html
+++ b/src/pages/orders_create.html
@@ -17,38 +17,42 @@
               <label class="order-form__label">Название товара на сайте</label>
               <input class="order-form__input" type="text" placeholder="Например: Iphone 12 pro 256 gold">
             </div>
-            <div class="my-order__field">
-              <label class="form__label">Цена</label>
-              <input class="form__input" type="number" placeholder="Например: $1234.33">
+            <div class = "my-order__field-group my-order__field-group--params">
+              <div class="my-order__field my-order__field--price">
+                <label class="order-form__label">Цена</label>
+                <input class="order-form__input" type="number" placeholder="Например: $1234.33">
+              </div>
+              <div class="my-order__field my-order__field--color">
+                <label class="order-form__label">Цвет (colour)</label>
+                <input class="order-form__input" type="text" placeholder="Например: green">
+              </div>
+              <div class="my-order__field my-order__field--size">
+                <label class="order-form__label">Размер (size)</label>
+                <input class="order-form__input" type="text" placeholder="Например: 7 M / 9,5 W">
+              </div>
+              <div class="my-order__field my-order__field--quantity">
+                <label class="order-form__label">Количество</label>
+                <input class="order-form__input" type="text" placeholder="Например: 1">
+              </div>
+          </div>
+            <div class="my-order__field-group my-order__field-group--replacements">
+              <div class="my-order__field my-order__field--replacements">
+                <label class="order-form__label">Замена по размеру</label>
+                <input class="order-form__input" type="text" placeholder="Например: green">
+                <p class="order-form__comment">На случай отсутствия осного варианта.</p>
+              </div>
+              <div class="my-order__field my-order__field--replacements">
+                <label class="order-form__label">Замена по цвету</label>
+                <input class="order-form__input" type="text" placeholder="Например: 7 M / 9,5 W">
+                <p class="order-form__comment">На случай отсутствия осного варианта.</p>
+              </div>
             </div>
-            <div class="my-order__field">
-              <label class="form__label">Цвет (colour)</label>
-              <input class="form__input" type="text" placeholder="Например: green">
-            </div>
-            <div class="my-order__field">
-              <label class="form__label">Размер (size)</label>
-              <input class="form__input" type="text" placeholder="Например: 7 M / 9,5 W">
-            </div>
-            <div class="my-order__field">
-              <label class="form__label">Количество</label>
-              <input class="form__input" type="text" placeholder="Например: 1">
-            </div>
-            <div class="my-order__field">
-              <label class="form__label">Замена по размеру</label>
-              <input class="form__input" type="text" placeholder="Например: green">
-              <p>На случай отсутствия осного варианта.</p>
-            </div>
-            <div class="my-order__field">
-              <label class="form__label">Замена по цвету</label>
-              <input class="form__input" type="text" placeholder="Например: 7 M / 9,5 W">
-              <p>На случай отсутствия осного варианта.</p>
-            </div>
-            <button>
+            <a href="#" class="order-form__button">
               Предпросмотр заказа
-            </button>
-            <button>
+            </a>
+            <a href="#" class="order-form__button order-form__button--save">
               Сохранить и добавить еще один товар
-            </button>
+            </a>
           </form>
         </div>
       </div>
